# tangerine

./: LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
tangerine/: CMakeLists.txt
tangerine/include/: tangerine.hpp
tangerine/src/: tangerine.cpp
tangerine/tests/: tests.cpp
